Redis as a Cache-Server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,27 @@
 version: '3.8'
 services:
   # application
-#  springboot:
-#    container_name: springboot
-#    restart: always
-#    #    build:
-#    #      context: .
-#    #      dockerfile: src/main/docker/Dockerfile
-#    image: parthostutradhar/zaxxio:0.0.1
-#    ports:
-#      - "8443:8443"
-#      - "80:80"
-#    environment:
-#      - SPRING_PROFILE_ACTIVE=prod # run in the production mode
-#    depends_on:
-#      - zookeeper
-#      - kafka-1
-#      - kafka-2
-#      - kafka-3
-#      - database
-#      - kafka-ui
-#    networks:
-#      - cloudNetwork
+  #  springboot:
+  #    container_name: springboot
+  #    restart: always
+  #    #    build:
+  #    #      context: .
+  #    #      dockerfile: src/main/docker/Dockerfile
+  #    image: parthostutradhar/zaxxio:0.0.1
+  #    ports:
+  #      - "8443:8443"
+  #      - "80:80"
+  #    environment:
+  #      - SPRING_PROFILE_ACTIVE=prod # run in the production mode
+  #    depends_on:
+  #      - zookeeper
+  #      - kafka-1
+  #      - kafka-2
+  #      - kafka-3
+  #      - database
+  #      - kafka-ui
+  #    networks:
+  #      - cloudNetwork
   eurekaserver:
     container_name: eurekaserver
     image: parthostutradhar/eureka:0.0.1
@@ -151,8 +151,16 @@ services:
       - "5432:5432"
     networks:
       - cloudNetwork
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
+  #    volumes:
+  #      - postgres_data:/var/lib/postgresql/data
+
+  # Redis Master Configuration
+  cache-server:
+    container_name: cache-server
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes --requirepass password
 
 networks:
   cloudNetwork:
