--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,11 +22,18 @@ spring:
     show-sql: false
     properties:
       hibernate.format_sql: false
+  data:
+    redis:
+      password: password
+      port: 6379
+      host: localhost
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+
 
 http:
   port: 80
