Added Grpc Client Support.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.jpa.properties.hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheC
 
 spring.jpa.properties.hibernate.generate_statistics=false
 
+spring.redis.password=password
+
+
 
