--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 spring:
   profiles:
     active: ${SPRING_PROFILE_ACTIVE:dev}
+
+
+grpc:
+  client:
+    grpc-client:
+      address: 'static://127.0.0.1:9090'
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: plaintext
