--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.generate_statistics=false
 
 # Quartz Configuration
 spring.quartz.job-store-type=jdbc
-spring.quartz.jdbc.initialize-schema=never
+spring.quartz.jdbc.initialize-schema=always
 spring.quartz.properties.org.quartz.jobStore.useProperties=false
 spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
