--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,15 +2,7 @@ spring:
   application:
     name: spring-boot-dev
   kafka:
-    bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
-    producer:
-      retries: 10
-    consumer:
-      properties:
-        reconnect:
-          backoff:
-            ms: 1000
-            max.ms: 10000
+    bootstrap-servers: localhost:9092
   datasource:
     url: jdbc:postgresql://localhost:5432/db
     driver-class-name: org.postgresql.Driver
