Date wise log a classic one. Cheers.

--- a/pom.xml
+++ b/pom.xml
@@ -155,11 +155,17 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
         <!--        Kafka Dependencies    -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+
 
 
         <dependency>
