--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,17 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
 
+# Log
+logging.file.name=logs/app.log
 
+#The filename pattern used to create log archives.
+logging.logback.rollingpolicy.file-name-pattern=logs/%d{yyyy-MM, aux}/app.%d{yyyy-MM-dd}.%i.log
 
+#The maximum size of log file before it is archived.
+logging.logback.rollingpolicy.max-file-size=1MB
+
+#The maximum amount of size log archives can take before being deleted.
+logging.logback.rollingpolicy.total-size-cap=10GB
+
+#The maximum number of archive log files to keep (defaults to 7).
+logging.logback.rollingpolicy.max-history=10
