--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka-1:19092"
+      # SCHEMA_COMPATIBILITY: BACKWARD
+      SCHEMA_COMPATIBILITY: FULL_TRANSITIVE
     depends_on:
       - zookeeper
       - kafka-1
