--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Hibernate Level Cache Configuration
 spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.hibernate.cache.use_query_cache=true
@@ -13,17 +14,26 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
 
-# Log
+# Log Configuration
 logging.file.name=logs/app.log
 
 #The filename pattern used to create log archives.
 logging.logback.rollingpolicy.file-name-pattern=logs/%d{yyyy-MM, aux}/app.%d{yyyy-MM-dd}.%i.log
 
 #The maximum size of log file before it is archived.
-logging.logback.rollingpolicy.max-file-size=1MB
+logging.logback.rollingpolicy.max-file-size=10MB
 
 #The maximum amount of size log archives can take before being deleted.
 logging.logback.rollingpolicy.total-size-cap=10GB
 
 #The maximum number of archive log files to keep (defaults to 7).
 logging.logback.rollingpolicy.max-history=10
+
+## root level
+#logging.level.root=error
+#
+## package level logging
+#logging.level.org.springframework.web=debug
+#logging.level.org.hibernate=error
+#logging.level.com.mkyong=error
+
