--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,9 @@ logging.logback.rollingpolicy.total-size-cap=10GB
 #The maximum number of archive log files to keep (defaults to 7).
 logging.logback.rollingpolicy.max-history=10
 
+logging.level.io.confluent.kafka.serializers.KafkaAvroDeserializerConfig=OFF
+
+
 ## root level
 #logging.level.root=error
 #
