Advanced Elastic Configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ logging.logback.rollingpolicy.total-size-cap=10GB
 logging.logback.rollingpolicy.max-history=10
 
 logging.level.io.confluent.kafka.serializers.KafkaAvroDeserializerConfig=OFF
+logging.level.io.confluent.kafka.serializers.KafkaAvroSerializerConfig=OFF
 
 
 ## root level
