--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.wsd</groupId>
-    <artifactId>springbootapp</artifactId>
+    <artifactId>spring-boot-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-app</name>
     <description>spring-boot-app</description>
@@ -18,7 +18,6 @@
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <hibernate-jcache.version>6.1.6.Final</hibernate-jcache.version>
         <ehcache.version>3.10.6</ehcache.version>
-
         <protobuf.version>3.23.4</protobuf.version>
         <protobuf-plugin.version>0.6.1</protobuf-plugin.version>
         <grpc.version>1.62.2</grpc.version>
@@ -64,7 +63,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
-
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
