QuartzSchedulerService for Dynamic Scheduling.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,13 @@ spring.jpa.properties.hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheC
 spring.jpa.properties.hibernate.generate_statistics=false
 
 # Quartz Configuration
-spring.quartz.job-store-type=jdbc
-spring.quartz.jdbc.initialize-schema=always
-spring.quartz.properties.org.quartz.jobStore.useProperties=false
-spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
-spring.quartz.properties.org.quartz.jobStore.isClustered=true
-spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+#spring.quartz.job-store-type=jdbc
+#spring.quartz.jdbc.initialize-schema=always
+#spring.quartz.properties.org.quartz.jobStore.useProperties=false
+#spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+#spring.quartz.properties.org.quartz.jobStore.isClustered=true
+#spring.quartz.auto-startup=true
+#spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
 
 # Log Configuration
 logging.file.name=logs/app.log
