--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.generate_statistics=false
 
 # Quartz Configuration
 spring.quartz.job-store-type=jdbc
-spring.quartz.jdbc.initialize-schema=never
+spring.quartz.jdbc.initialize-schema=always
 spring.quartz.properties.org.quartz.jobStore.useProperties=false
 spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
@@ -32,6 +32,12 @@ logging.logback.rollingpolicy.max-history=10
 
 logging.level.io.confluent.kafka.serializers.KafkaAvroDeserializerConfig=OFF
 logging.level.io.confluent.kafka.serializers.KafkaAvroSerializerConfig=OFF
+
+
+# SQL
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.schema-locations=classpath:schema/schema.sql
 
 
 ## root level
