--- a/pom.xml
+++ b/pom.xml
@@ -220,23 +220,20 @@
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
-            <version>1.11.0</version>
+            <version>1.11.3</version>
         </dependency>
 
-
-        <!--        <dependency>-->
+<!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-docker-compose</artifactId>-->
 <!--            <scope>runtime</scope>-->
 <!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-        </dependency>
+
     </dependencies>
 
 
@@ -306,8 +303,8 @@
                     <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
-                    <!--                    &lt;!&ndash; Set the source directory for .proto files &ndash;&gt;-->
-                    <!--                    <protoSourceRoot>src/main/proto</protoSourceRoot>-->
+                    <!-- Set the source directory for .proto files -->
+                    <protoSourceRoot>src/main/proto</protoSourceRoot>
                     <!--                    &lt;!&ndash; Set the output directory for the generated Java files &ndash;&gt;-->
                     <!--                    <outputDirectory>${project.build.directory}/generated-sources/protobuf/java</outputDirectory>-->
                 </configuration>
