--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,12 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.schema-locations=classpath:schema/schema.sql
 
 
+# Axon Configuration
+axon.axonserver.servers=localhost:8124
+axon.axonserver.context=default
+
+axon.eventhandling.processors.product-group.mode=subscribing
+
 ## root level
 #logging.level.root=error
 #
